Load shaders and textures from the classpath
Paso 6 del plan: Main usaba rutas "src/main/resources/..." que solo
funcionaban si el juego se ejecutaba desde la raíz del repo, y
empaquetado en .jar no encontraba los archivos.

- ShaderProgram.readFile pasa a ser readResource y lee con
  getResourceAsStream.
- Texture lee los bytes del recurso a un ByteBuffer nativo y los
  decodifica con stbi_load_from_memory (el buffer se libera al final).
- Main usa "/shaders/..." y "/textures/..." como rutas del classpath.

Probado sin GPU desde otra carpeta contra el .jar empaquetado: los
shaders se leen, el atlas se decodifica a 1024x1023 con los mismos
píxeles que stbi_load por ruta, y un recurso faltante da un error claro.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JYFh1rypt9y5Cu7UPzco7h